Refs #139198 - Fix left space in expanded column, on small screens.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -272,6 +272,7 @@ div#page-document {
   div.col-right {
     width: 100% !important;
     max-width: 100% !important;
+    padding-left: 0px !important;
   }
 
   div.col-left {
